# fdtree-rs

./: Cargo.toml  README.md
dtb/: test.dtb
dts/: test.dts
src/: error.rs  header.rs  lib.rs  node.rs  parsing.rs  pretty_print.rs  standard_nodes.rs
src/kernel_nodes/: chosen.rs  dice.rs  interrupt.rs  memory.rs  mod.rs  reserved_memory.rs
tests/: tests_basic.rs
